[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Player/Kunai.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Kunai.gd" type="Script" id=2]
[ext_resource path="res://Sprites/FX/Knife_puff.png" type="Texture" id=3]
[ext_resource path="res://SFX/SFX/Kunai_throw.wav" type="AudioStream" id=4]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 7 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.262376, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -4.23162, 0.0, 0, 0 ]

[node name="Kunai" type="Area2D"]
z_index = 1
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 1 )

[node name="Trail" type="Line2D" parent="."]
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.427451, 0.12549, 0.278431, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Puff" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 82.57
scale_amount = 1.2
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
bus = "Player"
script = ExtResource( 5 )
samples = [ ExtResource( 4 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[connection signal="body_entered" from="." to="." method="_on_Kunai_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
